--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <body>
-<a href="000_1-sds-3-x">000_1-sds-3-x</a>
+<ul>
+  <li>000_1-sds-3-x <a href="000_1-sds-3-x">book</a>, 
+  <a href="https://github.com/lamastex/scalable-data-science/raw/master/dbcArchives/2021/000_1-sds-3-x.dbc">.dbc</a>, 
+   <a href="https://lamastex.github.io/scalable-data-science/sds/3/x/000_1-sds-3-x">site</a>
+  </li>
+ </ul>
 <a href="000_2-sds-3-x-ml">000_2-sds-3-x-ml</a>
 <a href="000_3-sds-3-x-st">000_3-sds-3-x-st</a>
 <a href="000_4-sds-3-x-ss">000_4-sds-3-x-ss</a>
